--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.04.2022 14:56:12</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 17.04.2022 07:10:17</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Sobota, 16. 04. 2022</h5>
+<h5>Neděle, 17. 04. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Houbová krémová</strong>
@@ -50,7 +50,7 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Sobota 16.4.2022</div>
+<div class="nadpis">Neděle 17.4.2022</div>
 <ul>
 <li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
@@ -67,39 +67,6 @@ None
 </table>
 <table>
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
-<tr>
-<td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="amount">100 g</td>
-<td class="title">Filátko z uzeného pstruha se salátem z černé čočky Beluga, granátovým jablkem a extra panenským olivovým olejem 4,10</td>
-<td class="pricem">169 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Krémová špenátová polévka s medvědím česnekem, restovanou panchettou a domácí tyčinkou grissini 1a,3,7</td>
-<td class="pricem">79 Kč</td>
-</tr>
-<tr>
-<td class="amount">200 g</td>
-<td class="title">Rolovaný hovězí Flank plněný listy mladé řepy, sušenými rajčaty a bylinkami s demi glace omáčkou na krémovém parmazánovém rizotu 1a,7,9</td>
-<td class="pricem">285 Kč</td>
-</tr>
-<tr>
-<td class="amount">150 g</td>
-<td class="title">Vídeňský telecí řízek smažený na přepuštěném másle s lehkým bramborovým salátem s dijonskou hořčicí a jarní cibulkou, polníček 1a,3,7,10</td>
-<td class="pricem">249 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Limetkový cheesecake s omáčkou z lesního ovoce 1a,3,7,12</td>
-<td class="pricem">89 Kč</td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
 </table>
 <table>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
