--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 19.04.2022 08:16:34</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 19.04.2022 08:45:44</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -94,7 +94,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s kaparovym maslem, stouchane brambory s porkem a creme fraiche, salatek 145</li><li>Paella s krevetami, kalamary, norskou treskou, zelenymi bylinkami, gaj coj a zeleninou, salatek 175</li><li>Indicke birjany z basmati ryze s trhanym hovezim na cibulce, fazolovymi lusky a zeleninou, okurkove tzatziki, salatek 145</li><li>Smazene rizecky z panenske svickove, stouchane brambory s porkem a creme fraiche, kysela okurka {L} 169</li><li>Pecene papriky a bataty zapecene s ementalem, pecene brambory, okurkove tzatziki 145</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s citronem a susenymi rajcaty, kari ze zeleneho hrachu, salatek 145</li><li>Peceny filet z cerstve norske tresky s citronem a susenymi rajcaty, kari ze zeleneho hrachu, salatek 175</li><li>Kow mo daeng – thajske grilovane veprove ve sladke a vonave marinade s badyanem, jasminova ryze, salatek 145</li><li>Bramborove gnocchi s trhanym bazantem pecenym na cervenem vine s korenovou zeleninou a hoblinami zrale goudy, salatek {L} 169</li><li>Indicka pakora {cizrnove smazenky} s pecenymi lilky, bataty, paprikami a cibulkou, pohanka, jogurtovy dip, salatek 145</li></ol>
 </td>
 </tr>
 </table>
