Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 19.04.2022 15:07:29</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 20.04.2022 07:30:23</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Úterý, 19. 04. 2022</h5>
+<h5>Středa, 20. 04. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Hrášková krémová</strong>
@@ -50,44 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Úterý 19.4.2022</div>
+<div class="nadpis">Středa 20.4.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Linecký koláč s tvarohem, borůvkami a drobenkou</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Mrkvový dort</div>
-<div class="cena">55 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Tomatová polévka s bylinkovým pestem v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Tomatová polévka s bylinkovým pestem samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Bramborové gnocchi s kuřecím masem, sýrová omáčka, cherry rajčata, mladý špenát <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Grilovaná vepřová panenka, pečené grenaillle, brusinková omáčka <em title="Mléko">7</em></div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Indický dhál z červené čočky, dušená rýže, sezamová semínka, koriandr <em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -98,13 +63,10 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Česnečka se šunkou a sýrem, chlebové krutony</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Žampionový krém s parmazánem</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Smažený sýr (45%), vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Španělský vepřový ptáček, dušená jasmínová rýže</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, naše šlehačka</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Drůbeží játra na grilu, pečené brambory s kmínem, chilli dip</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 150g Dorůžova pečená vepřová panenka, brokolicové pyré s máslem a rukolou, sázené vejce na šunce</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborové halušky s uzeným masem a zelím, smažená cibulka na sádle</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně gratinovaný sýrem a šunkou, smažené bramborové hranolky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná filírovanou vepřovou panenkou, česnekovým dresinkem, anglickou slaninou, ledovým salátem, čerstvou zeleninou a sýrem, smažené bramborové hranolky, tatarka</td><td class="menuPrice">159,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažený řízek z kuřecích prosu, bramborová kaše s máslem, citrón</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rajská omáčka s hovězím masem, těstoviny kolínka</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Křenová omáčka s uzenou pečená z tálu, kynuté houskové knedlíky</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, špenát</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené masové čevabčiči, vařené brambory s máslem a šnitlíkem, hořčice, cibule</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka, červená řepa s rukolou a křenem, vajíčkový salát s hermelínem a paprikou</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně, smetanová omáčka s kukuřicí a kapií, restované špecle, rukola</td><td class="menuPrice">146,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Zapečený kuskus se zeleninou a uzeninou, vejci a smetanou, kyselá okurka</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstovinový salát s majonézovým dresinkem a zeleninou, filírovaná kuřecí prsa, vařené vejce</td><td class="menuPrice">143,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight"></td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený kuřecí řízek a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">150g Smažený řízek z kuřecích prsou, vařené brambory s máslem a šnitlíkem, citron</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">150g Steak z vepřové pečeně se třemi druhy sýra, hranolky</td><td class="menuPrice">125,-</td></tr></tbody>
@@ -121,35 +83,7 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="amount">100 g</td>
-<td class="title">Filátko z uzeného pstruha se salátem z černé čočky Beluga, granátovým jablkem a extra panenským olivovým olejem 4,10</td>
-<td class="pricem">169 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Krémová špenátová polévka s medvědím česnekem, restovanou panchettou a domácí tyčinkou grissini 1a,3,7</td>
-<td class="pricem">79 Kč</td>
-</tr>
-<tr>
-<td class="amount">200 g</td>
-<td class="title">Rolovaný hovězí Flank plněný listy mladé řepy, sušenými rajčaty a bylinkami s demi glace omáčkou na krémovém parmazánovém rizotu 1a,7,9</td>
-<td class="pricem">285 Kč</td>
-</tr>
-<tr>
-<td class="amount">150 g</td>
-<td class="title">Vídeňský telecí řízek smažený na přepuštěném másle s lehkým bramborovým salátem s dijonskou hořčicí a jarní cibulkou, polníček 1a,3,7,10</td>
-<td class="pricem">249 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Limetkový cheesecake s omáčkou z lesního ovoce 1a,3,7,12</td>
-<td class="pricem">89 Kč</td>
-</tr>
-</tbody>
-</table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Krkonošské kyselo s vaječnou omeletou 1a,3,7,12</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Plněný paprikový lusk mletým masem s rajskou omáčkou a jasmínovou rýží 1a,3,7,9</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Anglický roastbeef s opečenými brambory Grenaille, chipotle majonézou a cibulovým salátem 3,6,7,10</td><td class="pricem">159 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Kuřecí medailonky v sýrovém těstíčku s bramborovou kaší a okurkovým salátem 1a,3,7</td><td class="pricem">145 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
