--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 20.04.2022 08:14:51</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 20.04.2022 08:47:01</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Středa, 20. 04. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Hrášková krémová</strong>
+<strong>Čočková s párkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát s pečeným hermelínem a bagetkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							133,-
-						</span>
-</p>
-<p>
-<strong>Segedínský guláš s houskovým knedlíkem</strong>
+<strong>Smažené Krůtí gordon bleu s opečeným bramborem a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
+						</span>
+</p>
+<p>
+<strong>Těstoviny se salsiciou a cuketou s parmazánem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							133,-
 						</span>
 </p>
 <p>
