--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 20.04.2022 08:47:01</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 20.04.2022 09:11:42</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Středa 20.4.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Kokosový puding s hruškovým pyré  (bez lepku a laktózy) </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Citronový cheesecake</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Makový/Tvarohový závin</div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Krém z červené čočky, kořenová zelenina, limetková šťáva v menu  <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Krém z červené čočky, kořenová zelenina, limetková šťáva samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Uzená krkovička s křenovou omáčkou, restovaná cibulka, pečené brambory <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Caesar salát s kuřecím masem, slanina, krutony, parmazán <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Ryby">4</em><em title="Mléko">7</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Grilovaný lilek zapečený s rajčaty a mozzarellou, bazalka, vařené brambory, dip že sušených rajčat <em title="Mléko">7</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -91,7 +131,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s citronem a susenymi rajcaty, kari ze zeleneho hrachu, salatek 145</li><li>Peceny filet z cerstve norske tresky s citronem a susenymi rajcaty, kari ze zeleneho hrachu, salatek 175</li><li>Kow mo daeng – thajske grilovane veprove ve sladke a vonave marinade s badyanem, jasminova ryze, salatek 145</li><li>Bramborove gnocchi s trhanym bazantem pecenym na cervenem vine s korenovou zeleninou a hoblinami zrale goudy, salatek {L} 169</li><li>Indicka pakora {cizrnove smazenky} s pecenymi lilky, bataty, paprikami a cibulkou, pohanka, jogurtovy dip, salatek 145</li></ol>
+<ol><li>Peceny filet z jihoceskeho pstruha s pecenymi cherry rajcaty a citronovo-horcicnym dresinkem, stouchane brambory s porkem, salatek 145</li><li>Spagety s chobotnici, omackou puttanesca {rajcata, ancovicky, olivy, kapary} a hoblinami tvrdeho syra {L} 175</li><li>Malajsky hovezi rendang s vonavym korenim, kokosovym mlekem a zazvorem, jasminova ryze, salatek 145</li><li>Smazeny teleci sekany rizek s ementalem, stouchane brambory s porkem, kysela okurka {L} 169</li><li>Lasagne se zelenym hrachem, cuketami a rajcaty zapecene ve smetanove omacce, salatek {L} 145</li></ol>
 </td>
 </tr>
 </table>
