Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 25.04.2022 08:47:12</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 25.04.2022 09:11:51</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Pondělí, 25. 04. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Polévka z červené řepy</strong>
+<strong>Polévka z červené čočky</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Znojemská hovězí pečeně s rýží NEBO těstovinou</strong>
+<strong>Míchaný salát s grilovanými vepřovými nudličkami</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Bavorské vdolky</strong>
+<strong>Boloňské Špagety s parmazánem a rukolou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							115,-
+							135,-
 						</span>
 </p>
 <p>
@@ -133,7 +133,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s jogurtovou krenovou omackou, pecene brambory, salatek 145</li><li>Peceny filet z cerstve prazmy s jogurtovou krenovou omackou, pecene brambory, salatek 175</li><li>Opekane veprove platky v omacce teryiaki s gaj coj a prazenym sezamem, jasminova ryze, salatek 145</li><li>Koroptvi prsicka plnena parmskou sunkou a ovcim syrem se susenymi rajcaty pecena na citronovem tymianu, gratinovane brambory, salatek 175</li><li>Bramborove gnocchi s ratatouille z pecene zeleniny se spetkou citronoveho tymianu a sazenym vejcem {L} 145</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka se peruanskou cibulovou salsou, frijoles refritos {mexicke stouchane fazole}, salatek 145</li><li>Peceny filet z cerstveho nilskeho okouna s peruanskou cibulovou salsou, frijoles refritos, salatek 175</li><li>Nam prik ong – pikantni thajske opekane veprove s rajcaty, krevetovou pastou, koriandrem a chilli, thajska lepkava ryze, salatek 145</li><li>Grilovane medailonky z hoveziho krku {argentina – angus} s peprovou omackou, gratinovane brambory, salatek {L} 175</li><li>Zapecene zampiony plnene gaj coj s modrym syrem a cibulkou, stouchane brambory s creme fraiche, salatek 145</li></ol>
 </td>
 </tr>
 </table>
