Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 05.05.2022 08:47:03</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 05.05.2022 09:12:19</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 5.5.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Bezlepkový košíček, malina-kokos s čokoládou </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Míša dort</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ořechový koláč</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Bramborová polévka s lesními houbami - samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Bramborová polévka s lesními houbami - v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Hovězí nudličky v teriyaki omáčce, jasmínová rýže, čerstvá zelenina, koriandr <em title="Ryby">4</em><em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Krůtí prso s bylinkami, vinná smetanová omáčka, mačkané brambory s červenou cibulí a slaninou, polníček <em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Citronový kuskus, Fitaki sýr, rajčata, olivy, paprika, rukolové pesto <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -88,7 +128,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Slavky na thajsky zpusob s kokosovym mlekem, citronovou travou, gaj coj a zeleninou, psenicne nudle {L} 145</li><li>Peceny filet z cerstve prazmy s grilovanym ananasem a rajcatovou salsou, pecene brambory, salatek 175</li><li>Laosky larb s veprovym masem, cerstvou zeleninou, bylinkami, pikantni sladkokyselou zalivkou, jasminovou ryzi a arasidy 145</li><li>Spagety s platky pecene teleci kyty, tunakovou omackou s ancovickami a creme fraiche a kaparami {L} 175</li><li>Indicke birjany z basmati ryze s grilovanym tempehem, listovym spenatem a zeleninou, jogurtovy dip, salatek 145</li></ol>
+<ol><li>Slavky na thajsky zpusob s kokosovym mlekem, citronovou travou, gaj coj a zeleninou, psenicne nudle {L} 145</li><li>Peceny filet z cerstve prazmy s grilovanym ananasem a salsou z cerstvych rajcat, pecene brambory, salatek 175</li><li>Laosky larb s veprovym masem, cerstvou zeleninou, bylinkami, pikantni sladkokyselou zalivkou, jasminovou ryzi a arasidy 145</li><li>Spagety s platky pecene teleci kyty, tunakovou omackou s ancovickami a creme fraiche a kaparami {L} 175</li><li>Indicke birjany z basmati ryze s grilovanym tempehem, listovym spenatem a zeleninou, jogurtovy dip, salatek 145</li></ol>
 </td>
 </tr>
 </table>
