Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 10.05.2022 08:46:28</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 10.05.2022 09:11:49</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -115,7 +115,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely se salsou z cerstvych rajcat s fenyklem a petrzelkou, zeleninovy kuskus, salatek {L} 145</li><li>Peceny filet z cerstveho candata se salsou z cerstvych rajcat s fenyklem a petrzelkou, zeleninovy kuskus, salatek {L} 175</li><li>Thajske massaman kari s krutim masem, ananasem, vonavym korenim a kokosovym mlekem, jasminova ryze 145</li><li>Spagety s nudlickami hoveziho rostence, gaj coj, paprickami jalapeno, petrzelkovym pestem a hoblinami tvrdeho syra {L} 169</li><li>Maghrebska cizrnova tazina s pecenou dyni, rajcaty a korenim ras el hanout, zeleninovy kuskus, salatek {L} 145</li></ol>
+<ol><li>Peceny cerstvy pstruh s citronem a petrzelkovym pestem, stredomorsky fusilli salat s rajcaty, paprikami, cuketami a zelenymi bylinkami {L} 145</li><li>Peceny filet z cerstveho morskeho dasa s citronem a petrzelkovym pestem, stredomorsky fusilli salat s rajcaty, paprikami, cuketami a  zelenymi bylinkami {L} 175</li><li>Grilovane veprove ribsy v indicke tanduri marinade, merunkove catny s nepalskym kardamomem, korenena ryze, salatek 145</li><li>Burrito s prsicky divoke kachny, rajcaty a pekingskym zelim, omacka z pecenych paprik, pecene brambory, salatek {L} 169</li><li>Kvetakove placicky s petrzelkou a spetkou muskatu, stouchane brambory s porkem, tatarska omacka {L} 145 </li></ol>
 </td>
 </tr>
 </table>
